aws/dome/consumer/orion-ld/templates/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: consumer-orion-ld-route
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: consumer-orion-ld-tls-sec
spec:
  host: orion.dome-consumer.fiware.dev
  to:
    kind: Service
    name: dome-consumer-orion-ld
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
